--- a/documents/holc-biodiversity.Rmd
+++ b/documents/holc-biodiversity.Rmd
@@ -132,7 +132,10 @@ tm_shape(los_angeles) + # los angeles data
 
 ***Understanding Characteristics of Census Groups in LA***
 
-To better understand the characteristics of Los Angeles, I performed calculations to find the percent of census groups in Los Angeles that: \* have less than 5% of the population considered low income \* above the 80th percentile for Particulate Matter 2.5 and above the 80th percentile for Superfund proximity.
+To better understand the characteristics of Los Angeles, I performed calculations to find the percent of census groups in Los Angeles that: 
+
+* have less than 5% of the population considered low income 
+* above the 80th percentile for Particulate Matter 2.5 and above the 80th percentile for Superfund proximity.
 
 In order to get these calculations, I filtered for the observations that had these specific values and divided by the total number of observations. I found that 6.11% of the census block groups have less than 5% of the population considered low income, and 17.4% of census block groups are above the 80th percentile for PM 2.5 and above the 80th percentile for Superfund proximity.
 
@@ -201,6 +204,7 @@ nrow(redline_block)
 ***Summary of Historically Redlining Census Block Groups***
 
 With the new dataset including the historically redlining census block groups, I summarized the current conditions by taking the means of:
+
 * percent low income
 * percentile for PM 2.5
 * percentile for low life expectancy
@@ -212,12 +216,14 @@ Each mean was taken by HOLD grade. These results showed that as the HOLC grades 
 # means by HOLC grade
 LA <- st_intersection(LA_redlining, los_angeles)
 
-LA %>% 
+summary_la <- LA %>% 
   group_by(grade) %>% 
   summarise(mean_lowinc = mean(LOWINCPCT * 100, na.rm = TRUE), 
             mean_pm = mean(P_PM25, na.rm = TRUE), 
             mean_lifepct = mean(P_LIFEEXPPCT, na.rm = TRUE),
             mean_cancerpct = mean(P_CANCER, na.rm = TRUE))
+
+print(summary_la)
 ```
 
 
